# INF574-cubification

./: CMakeLists.txt  CubicMinimizer.cpp  CubicMinimizer.h  README.txt  eigen-qp.h  main.cpp  pch.h
